--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="menu_slideshow">Playlists</string>
 
     <string name="home_second">Home Second</string>
+
+    <string-array name="select_search_tracks">
+        <item>artist</item>
+        <item>album</item>
+        <item>title</item>
+    </string-array>
+
 </resources>
